--- a/_layouts/stylesheets/stylesheet.css
+++ b/_layouts/stylesheets/stylesheet.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 h2 {
-  padding-bottom: 10px;
+  /*padding-bottom: 10px;*/
   font-size: 32px;
   background: url('../images/bg_hr.png') repeat-x bottom;
 }
