- Remove Margins on headers.

--- a/_layouts/stylesheets/stylesheet.css
+++ b/_layouts/stylesheets/stylesheet.css
@@ -303,6 +303,7 @@ Full-Width Styles
   font-size: 42px;
   font-weight: 700;
   text-shadow: #111 0px 0px 10px;
+  margin: 0px;
 }
 
 #project_tagline {
@@ -311,6 +312,7 @@ Full-Width Styles
   font-weight: 300;
   background: none;
   text-shadow: #111 0px 0px 10px;
+  margin: 0px;
 }
 
 #downloads {
