--- a/_layouts/SiteMaster.html
+++ b/_layouts/SiteMaster.html
@@ -25,6 +25,7 @@
             <ul class="nav nav-pills">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./Plugins.html">Plugins</a></li>
+                <li><a href="./Resources.html">Resources</a></li>
                 <li><a href="./FAQ.html">FAQ</a></li>
                 <li><a href="./About.html">About</a></li>
             </ul>
